--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "classnames": "^2.3.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
+    "react-alert-template-mui": "^1.0.7",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-redux": "^8.0.1",
