--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.2"
+    "semantic-ui-react": "^2.1.2",
+    "surge": "^0.23.1"
   },
   "version": "1.0.0",
   "description": "Projet d'apothéose site E-commerce",
