--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,14 +1,5 @@
-# Activer la réécriture d'url
-RewriteEngine On
-
-# Configuration de base de l'URL
-RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
-RewriteRule ^(.*) - [E=BASE_URI:%1]
-
-# Renvoie tout vers index.php
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteBase /
+RewriteRule ^index\.html$  - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.html?_url=/$1 [QSA,L]
-
-RewriteCond %{HTTP:Authorization} ^(.*)
-RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.html [L]
